# microbit-tug-of-war

./: Cargo.toml  README.md  justfile  memory.x
embed-mutex/: Cargo.toml
embed-mutex/src/: lib.rs
src/: buttons.rs  display.rs  main.rs  sound.rs  spiral.rs
src/game/: mod.rs  s0_idle.rs  s1_ready.rs  s2_game.rs  s3_result.rs
tug-of-war/: Cargo.toml  build.rs  memory-debug.x  memory.x
tug-of-war/.cargo/: config
tug-of-war/src/: buttons.rs  debug.rs  display.rs  main.rs  notes.rs  sound.rs  spiral.rs
tug-of-war/src/game/: mod.rs  s0_idle.rs  s1_ready.rs  s2_game.rs  s3_result.rs
